--- a/bank-app/pom.xml
+++ b/bank-app/pom.xml
@@ -27,9 +27,9 @@
     </dependency>
     
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20240303</version>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.4.0</version>
     </dependency>
   </dependencies>
 
